[package]
name = "mycompiler"
version = "0.1.0"
edition = "2021"

[build-dependencies.lalrpop]
version = "0.19.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
koopa = "0.0.6"

[dependencies.lalrpop-util]
version = "0.19.9"
features = ["lexer"]
